objects/Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Scrum_Team__c</fullName>
        <label>Scrum Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AppStore</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>CorpSec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feature Release</fullName>
                </value>
                <value>
                    <fullName>Hotfix Release</fullName>
                </value>
                <value>
                    <fullName>Configuration Release</fullName>
                </value>
                <value>
                    <fullName>Enhancement Release</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Manager__c</fullName>
        <label>Release Manager</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lakshmikanth Katputur</fullName>
                </value>
                <value>
                    <fullName>Chaitanya Mandalapu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_Quarter__c</fullName>
        <label>Deployment Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Quarter</fullName>
                </value>
                <value>
                    <fullName>2nd Quarter</fullName>
                </value>
                <value>
                    <fullName>3rd Quarter</fullName>
                </value>
                <value>
                    <fullName>4th Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment</label>
    <nameField>
        <label>Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>